force-app/main/default/objects/Cygnet_Integration_Setting_Under_SS__c/Cygnet_Integration_Setting_Under_SS__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Cygnet API for Secondary Invoice Under SS record type. Setup &gt; Custom Settings &gt; Cygnet Integration Setting Under SS &gt; Manage.</description>
    <label>Cygnet Integration Setting Under SS</label>
</CustomObject>