force-app/main/default/objects/Cygnet_Integration_Setting_Under_SS__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <description>Client ID for Cygnet authenticate API (header: client-id)</description>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>