force-app/main/default/objects/Cygnet_Integration_Setting_Under_SS__c/fields/SF_User_Name__c.field-meta.xml
<CustomField>
    <fullName>SF_User_Name__c</fullName>
    <description>Must match the Salesforce Username (Login) of users allowed to call Cygnet for Under SS invoices.</description>
    <label>SF User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>