force-app/main/default/objects/Cygnet_Integration_Setting_Under_SS__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Username for Cygnet authenticate API (request body)</description>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>